[Dynamic tabs in angular]

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,3 +5,4 @@
 <!-- <app-paginate></app-paginate> -->
 <!-- <app-dialog></app-dialog> -->
 <app-call-dialog></app-call-dialog>
+<app-tabs></app-tabs>
